# vst-filter

./: CMakeLists.txt  README.md
Source/: FilterBand.cpp  FilterBand.h  LinearPhaseEQ.cpp  LinearPhaseEQ.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SpectrumAnalyzer.cpp  SpectrumAnalyzer.h
